--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@flaticon/flaticon-uicons": "^1.7.0",
         "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@fortawesome/free-brands-svg-icons": "^6.0.0",
         "@fortawesome/free-regular-svg-icons": "^6.1.1",
@@ -12,8 +13,10 @@
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "clsx": "^1.1.1",
+        "framer-motion": "^6.3.11",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
+        "react-calendar": "^3.7.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
         "swiper": "^8.2.4",
