--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-calendar": "^3.7.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
+        "react-scroll": "^1.8.7",
         "swiper": "^8.2.4",
         "web-vitals": "^2.1.4"
     },
