--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "clsx": "^1.1.1",
+        "firebase": "^9.8.4",
         "flaticon": "^0.1.0",
         "framer-motion": "^6.3.11",
         "normalize.css": "^8.0.1",
